@@ -1,13 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.example</groupId>
+    <groupId>me.johannes.autumn</groupId>
     <artifactId>Autumn-Leaves-Identification-System</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
         <javafx.version>25.0.2</javafx.version>
     </properties>
     <dependencies>
@@ -40,7 +38,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <release>25.0.2</release>
+                    <release>25</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -51,6 +49,7 @@
                     <mainClass>me.johannes.autumn.main.App</mainClass>
                     <options>
                         <option>--enable-native-access=javafx.graphics</option>
+                        <option>--sun-misc-unsafe-memory-access=allow</option>
                     </options>
                 </configuration>
             </plugin>
